# inf-llm

./: .gitignore  README.md
llama_backend/: dump.rdb  manage.py  pyproject.toml
llama_backend/backend/: admin.py  llama_answer.py  models.py  serializer.py  signals.py  tasks.py  views.py
llama_backend/backend/migrations/: 0001_initial.py
llama_backend/llama_backend/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
llama_frontend/: package-lock.json  package.json  tailwind.config.ts
llama_frontend/src/app/: page.tsx
llama_frontend/src/app/chat/[chatid]/: page.tsx
llama_frontend/src/components/: api.tsx
